<resources>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>
	
	<string name="menu_settings">Settings</string>
	<string name="menu_communicate">Communicate</string>
	<string name="menu_share">Share this app</string>
	<string name="menu_send">Send us feedback</string>
	
	<string name="txt_error">Error</string>
	<string name="txt_caution">Caution</string>
	<string name="txt_unknown">unknown</string>
	
	<string name="txt_login">Log in</string>
	<string name="txt_email">Email</string>
	<string name="txt_pass">Password</string>
	<string name="txt_pass_ret">Retype password</string>
	<string name="txt_pass_frg">Forgot password?</string>
	<string name="txt_dont">Don\'t have an account?\u0020</string>
	<string name="txt_create_one">Create one!</string>
	<string name="txt_register">Create account</string>
	<string name="txt_recover_pass">Recover password</string>
	<string name="txt_recovery_info">Please note, this recovery method works only for registered accounts. Please check out your email.</string>
	<string name="add_warn_email_empty">Email cannot be empty</string>
	<string name="add_warn_email_no_fit">Invalid email format, it must be like name@example.com</string>
	<string name="txt_oops">Oops something\'s gone wrong! Please try again later.</string>
	<string name="txt_reg_fail">Registration failed, please use another email</string>
	<string name="txt_reg_fail_later">Registration failed, please try again later</string>
	<string name="txt_login_fail_later">Authentification failed, please try again later</string>
	<string name="txt_login_fail">Authentification failed, please make sure you inserted correct email and password</string>
	<string name="txt_recovery_fail_later">Recovery failed, please try again later</string>
	<string name="txt_recovery_fail">Recovery failed, please make sure you inserted correct email</string>
	<string name="txt_recovery_ok">Recovery successfully, please checkout your email</string>
	<string name="txt_congrat">Congratulation</string>
	<string name="txt_congrat_det">Your account was successfully registered. You\'ll be redirected to home page</string>
	<string name="txt_no_maps">Please make sure you have Google maps installed</string>
	<string name="txt_oops_weathre">Oops something\'s gone wrong to get weather.</string>
	
	<string name="share_subject_txt">Your trusted employment manager</string>
	
	<string name="add_warn_pass_empty">Password must contain at least 6 characters</string>
	<string name="add_warn_pass_retype">Passwords must be the same</string>
	
	<string name="txt_warn_logout">Are you sure to sign out?</string>
	
	<string name="txt_no_jobs">No jobs found</string>

	<string name="txt_tomorrow">Tomorrow at</string>
	<string name="txt_today">Today at</string>
	<string name="txt_ysterday">Yesterday at</string>

	<string name="txt_select_field">Select field</string>
	<string name="txt_applicants">Applicants</string>
	<string name="txt_phone">Phone (optional)</string>
	<string name="txt_save_pub">Save &amp; publish my talent</string>


	<string name="txt_select_field_warn">Field is not selected!</string>
	<string name="txt_title_warn">Title cannot be empty!</string>
	<string name="txt_descr_warn">Description cannot be empty!</string>
	<string name="txt_adres_warn">Address cannot be empty!</string>
	<string name="txt_price_warn">Price cannot be empty!</string>
	<string name="txt_phone_warn">Incorrect phone number format!</string>


	<string name="txt_job_det">Job details</string>
	<string name="txt_talent_det">Talent details</string>
	<string name="txt_field">Field</string>
	<string name="txt_adres">Address</string>
	<string name="txt_date">Creation date</string>
	<string name="txt_phone_only">Phone</string>
	<string name="txt_email_only">Email</string>

	<string name="txt_seen">Seen by</string>
	<string name="txt_talents">talents</string>
	<string name="txt_remove">Remove job</string>
	<string name="txt_call">Call</string>
	<string name="txt_send_email">Send email</string>
	<string name="txt_remot">Remote</string>
	<string name="txt_negociab">Negotiable</string>

	<string name="txt_ask_delete_job">Are you sure to delete this job?</string>

</resources>
