<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/custom_dim_24"
        android:src="@mipmap/ic_launcher" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/iv_logo"
        android:gravity="center_horizontal|center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/it_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ellipsize="end"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="@dimen/txt_medium_xs" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/it_email"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/accent">

            <EditText
                android:id="@+id/et_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ellipsize="end"
                android:hint="@string/txt_pass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/txt_medium_xs" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_pass_retype"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_pass"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/accent">

            <EditText
                android:id="@+id/et_pass_retype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:ellipsize="end"
                android:hint="@string/txt_pass_ret"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="@dimen/txt_medium_xs" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ti_pass_retype"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/custom_dim_24"
            android:text="@string/txt_register"
            android:textAllCaps="false" />

    </RelativeLayout>


</RelativeLayout>